# tqs

./: .gitignore  build.sbt
c/: CMakeLists.txt
c/lib/myutils/: CMakeLists.txt
c/src/: CMakeLists.txt  algo.h  stralet.h
c/src/algo/: algo_pm.cpp
c/src/bt/: backtest.cpp  backtest.h  demo.cpp  demo_ifhft.cpp  demo_rbreaker.cpp  sim_context.cpp  sim_context.h  sim_data.cpp  sim_data.h  sim_trade.cpp  sim_trade.h
etc/: backtest.conf  demostralet.conf
scala/: build.sbt
scala/demo/: build.sbt
scala/demo/etc/: backtest.conf  demostralet.conf  rb.SHF.csv
scala/demo/src/main/scala/cta/: LongShortMAStralet.scala  OneTickStralet.scala  RBreakerStralet.scala
scala/demo/src/main/scala/demo/: DemoStralet.scala
scala/tqs/: build.sbt
scala/tqs/etc/: backtest.conf  demostralet.conf  realtime.conf
scala/tqs/src/main/resources/sim/: ctp_codetable.csv
scala/tqs/src/main/scala/xtz/tquant/stra/backtest/: Boot.scala  Container.scala  DemoStralet.scala  Run.scala  (+4 more)
src/main/scala/xtz/tquant/stra/backtest/: BackTestData.scala  BackTestRunner.scala  BackTestTrade.scala  Boot.scala  Config.scala  CsvDataApi.scala  DemoStralet.scala  Runner.scala  SimDataApi.scala  SimStraletContext.scala  SimTradeApi.scala  StraletTest.scala  TestConfig.scala  TestSession.scala
src/main/scala/xtz/tquant/stra/realtime/: Boot.scala  DataApiImpl.scala  StraletActor.scala  TradeApiImpl.scala
src/main/scala/xtz/tquant/stra/stralet/: Stralet.scala
src/main/scala/xtz/tquant/stra/stralet/impl/: StraletConfigImpl.scala
src/main/scala/xtz/tquant/stra/utils/: TimeUtils.scala
(+35 files in other folders)
